[gd_scene load_steps=5 format=3 uid="uid://pgximhvppys1"]

[ext_resource type="Script" path="res://Scripts/in_game_ui.gd" id="1_1unsp"]
[ext_resource type="Script" path="res://Scripts/combo_score.gd" id="1_jr53p"]
[ext_resource type="AudioStream" uid="uid://dxnv3bgbdy2u" path="res://assets/audio/sfx/Menu-Validation.wav" id="3_fdl8h"]
[ext_resource type="AudioStream" uid="uid://cxs2b2t47n35k" path="res://assets/audio/sfx/Menu-Select.wav" id="4_yabxv"]

[node name="InGameUI" type="CanvasLayer"]
script = ExtResource("1_1unsp")

[node name="ComboScore" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -579.0
offset_top = -50.0
offset_right = 579.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(579, 25)
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]PLACEHOLDER[center]"
scroll_active = false
script = ExtResource("1_jr53p")

[node name="GAME_OVER" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]GAME OVER[/b]
You end your worm life miserably at a score of PLACEHOLDER[/center]"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 1.0
offset_right = 150.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MainMenuButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "MAIN MENU"

[node name="RestartButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="Validation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fdl8h")
bus = &"Sfx"

[node name="Selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yabxv")
bus = &"Sfx"

[connection signal="mouse_entered" from="ButtonContainer/MainMenuButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/MainMenuButton" to="." method="_on_mainmenu_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
